fix: cart icon alignment

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -134,6 +134,7 @@
 
   .header__menu {
     display: flex !important;
+    align-items: center;
     position: static;
     flex-direction: row;
     width: auto;
